fix z-index + group in panel

--- a/web/src/components/netflow-traffic.css
+++ b/web/src/components/netflow-traffic.css
@@ -33,3 +33,7 @@ span.pf-c-button__icon.pf-m-start {
     flex-direction: column;
     max-height: 90vh;
 }
+
+#drawer {
+    z-index: 0;
+}
